--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
-*/node_modules/
+/node_modules/
+*/node_modules
 
 # React Router
-*/.react-router/
-*/build/
+/.react-router/
+/build/
 .idea
