--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
+    "@supabase/supabase-js": "^2.49.4",
     "cytoscape": "^3.31.2",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
